[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"

serenity = {version = "0.11.6", features = ["gateway", "framework", "standard_framework"]}

tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}